kubernetes/apps/code-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    toolkit.fluxcd.io/tenant: dev-team
